@@ -1,3 +1,13 @@
+Wed Jul 13 18:10:39 UTC 2011  Dean Wette  <wette_d@ociweb.com>
+
+        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/plugin.xml:
+        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/diagram/dcpslib/edit/parts/DomainParticipantEditPart.java:
+        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/src/org/opendds/modeling/diagram/dcpslib/part/OpenDDSDcpsLibDiagramEditor.java:
+        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
+
+          Enabled drag and drop from DcpsLib elements in Project Explorer to DcpsLib diagram
+          to support external topic references.
+
 Wed Jul 13 17:58:06 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * tools/modeling/tests/setup.pl:
